<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333D45"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#333D45"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleview"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="GUIDER"
            android:background ="#4a3139"
            android:fontFamily="monospace"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C51D31"
            android:text="@string/advise1"
            android:textColor="#040303"
            android:textSize="15sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ccc" />
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fff" />
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ddd" />

        </LinearLayout>
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/advise4"
            android:textAlignment="viewStart" />


        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/advise5"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/advise6"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FABF07"
            android:text="@string/advise2"
            android:textSize="15sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/aaa" />
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bbb" />
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eee" />

        </LinearLayout>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/advise7"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/advise8"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:text="@string/advise3"
            android:textSize="15sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:src="@drawable/ggg" />

        </LinearLayout>
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/advise9"
            android:textAlignment="viewStart" />

        <LinearLayout
            android:id="@+id/linearLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listView"
            app:layout_constraintVertical_bias="1.0">


            <ImageView
                android:id="@+id/main_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#4a3139"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_dialog_dialer" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#4a3139"
                android:scaleType="center"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#4a3139"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/sandclock_icon_white" />

            <ImageView
                android:id="@+id/menu_apps_action_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#4a3139"
                android:gravity="center"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_settings_white_24dp"
                tools:ignore="VectorDrawableCompat" />



        </LinearLayout>


    </LinearLayout>
</ScrollView>